<resources>
    <string name="app_name">BaseAndroidITVDN_2</string>
    <string name="confirm_text">Confirm</string>
    <string name="your_age_text">your_age</string>
    <string name="your_name_text">your name</string>
    <string name="back_text">Back</string>
    <string name="second_activity_text">Second Activity</string>
    <string name="contacts_text">Contacts</string>
    <string name="first_activity_text">First Activtty</string>
    <string name="length_short_text">length short</string>
    <string name="length_long_text">length long</string>
    <string name="hint_your_login_edit_text">your login</string>
    <string name="hint_your_password_edit_text">your password</string>
    <string name="register_text_view">Register</string>
    <string name="login_button">Login</string>
    <string name="press_name_text_view">Press name:</string>
    <string name="register_text">Register</string>
    <string name="login_text">Login</string>
    <string name="empty_text" />
    <string name="exit_text">Exit</string>
    <string name="write_language_text">Write Language</string>
    <string name="write_name_text">Write Name</string>
    <string name="press_name_text">Press Name</string>
    <string name="english_text">english</string>
    <string name="ukraine_text">ukraine</string>
    <string name="russian_text">russian</string>
    <string name="confirm_your_name_message">Your name:</string>
    <string name="confirm_your_language_message">Your language:</string>
    <string name="touch_me_text">Touch Me</string>
    <string name="show_dialog_text">Show Dialog</string>
    <string name="add_phone_text">add phone</string>
    <string name="press_number_text">Press Number</string>
    <string name="notification_text">notification</string>
    <string name="you_know_secret_text">You know secret!</string>
</resources>
