<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/count_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/empty_text"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/dialog_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/press_name_text"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/dialog_phone_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/press_number_text"
        android:ems="10"
        android:inputType="phone" />

</LinearLayout>