<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="horizontal"
    android:padding="8dp"
    tools:context=".activity_return_result.ChangeLanguageActivity">

    <Button
        android:id="@+id/english_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="choseOnClick"
        android:text="@string/english_text" />

    <Button
        android:id="@+id/ukraine_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="choseOnClick"
        android:text="@string/ukraine_text" />

    <Button
        android:id="@+id/russian_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="choseOnClick"
        android:text="@string/russian_text" />

</LinearLayout>