<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".activity_lifecycle.FirstActivity">

    <Button
        android:id="@+id/touch_me_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="onClick"
        android:text="@string/touch_me_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result_lifecycle_text_view" />

    <Button
        android:id="@+id/second_activity_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/second_activity_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/touch_me_button"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/exit_lifecycle_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/exit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/second_activity_button"
        android:onClick="onClick"/>

    <TextView
        android:id="@+id/result_lifecycle_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/empty_text"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>